--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -1,9 +1,8 @@
-name: Origins-Mobs
-version: 1.0.22
+name: Origins-Mobs-Enhanced
+version: 1.0.23
 main: com.starshootercity.originsmobs.OriginsMobs
 description: Origins-Reborn addon based on the Mob Origins mod by UltrusBot
 api-version: '1.19'
 author: cometcake575
-
 depend:
-  - Origins-Reborn
+  - Origins-Reborn-Enhanced
